# anthemyr

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/: copilot-instructions.md
anthemyr/: __init__.py  __main__.py
anthemyr/colony/: __init__.py  ant.py  colony.py  evolution.py  policies.py  traits.py
anthemyr/net/: __init__.py
anthemyr/pheromones/: __init__.py  diffusion.py  fields.py
anthemyr/simulation/: __init__.py  config.py  engine.py
anthemyr/ui/: __init__.py  pygame_client.py
anthemyr/world/: __init__.py  cell.py  environment.py  world.py
config/: default.yaml
tests/: conftest.py  test_colony.py  test_evolution.py  test_lifecycle.py  test_pheromones.py  test_simulation.py  test_ui.py  test_world.py
